2005-05-19  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/nautilus-ext/seahorse-nautilus.c: Clearer status messages
    for nautilus plugin.
    * agent/seahorse-agent-io.c: Create agent socket inside users home
    directory.
    * libseahorse/seahorse-pgp-source.c: Fix problem where only keys that
    were already imported would be reported by the import operation.
    * libseahorse/seahorse-progress.c: 
    * src/seahorse-key-manager.c: 
    * src/seahorse-keyserver-results.c: Display status text properly after
    performing an operation with no or minimal visible results. 
    * src/Makefile.am:
    * src/seahorse-pgp-keys.desktop.in: Add a 'Open With' menu item for 
    PGP keys. Fixes bug #304788
    * src/main.c: Fix memory leak
    * src/seahorse-widget.c: 
    * src/seahorse-key-manager.c:
    * src/seahorse-key-manager.glade:
    * src/seahorse-keyserver-results.c:
    * src/seahorse-keyserver-results.glade: Remove flicker during startup
    due to the UI being read in and changing.
    
2005-05-18  Nate Nielsen  <nielsen@memberwebs.com>

	* libseahorse/seahorse-widget.c: 
	* libseahorse/seahorse-widget.h:
	* src/Makefile.am:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager.glade:
	* src/seahorse-key-manager.ui:
	* src/seahorse-keyserver-results.c:
	* src/seahorse-keyserver-results.glade:
	* src/seahorse-keyserver-results.ui: Use a GtkUIManager based 
	UI for menus and toolars.
	* libseahorse/seahorse-prefs-cache.c: Fix problem with controls
	not being set to initial state. See bug #304566
	* agent/seahorse-agent-cache.c: When gconf cache_authorize setting
	is set to false, clear the cache. Closes a small security hole.
    * agent/seahorse-agent.c:
    * libseahorse/seahorse-gpg-options.c: Cleanup handling of gpg.conf
    * agent/seahorse-agent-cache.glade: 
    * agent/seahorse-agent-status.c:
    * plugins/nautilus/seahorse-pgp-preferences.c: Add 'Cache Preferences' 
    item to the agent tray popup menu.
    