@@ -833,8 +833,12 @@ void
 seahorse_util_chooser_show_key_files (GtkWidget *dialog)
 {
     GtkFileFilter* filter = gtk_file_filter_new ();
+    
+    /* Filter for PGP keys. We also include *.asc, as in many 
+       cases that extension is associated with text/plain */
     gtk_file_filter_set_name (filter, _("All key files"));
-    gtk_file_filter_add_mime_type (filter, "application/pgp-keys");    
+    gtk_file_filter_add_mime_type (filter, "application/pgp-keys");
+    gtk_file_filter_add_pattern (filter, "*.asc");    
     gtk_file_chooser_add_filter (GTK_FILE_CHOOSER (dialog), filter);    
     gtk_file_chooser_set_filter (GTK_FILE_CHOOSER (dialog), filter);
 
