@@ -1,3 +1,9 @@
+2005-05-20  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * seahorse-util.c: Always associate *.asc with application/pgp-keys 
+    in the chooser dialog. The mime handling doesn't always work early
+    enough.
+    
 2005-05-19  Nate Nielsen  <nielsen@memberwebs.com>
 
     * plugins/nautilus-ext/seahorse-nautilus.c: Clearer status messages
